block refactoring